app-task2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-task2
  labels:
    app: app-task2
spec:
  replicas: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 3
  selector:
    matchLabels:
      app: app-task2
  template:
    metadata:
      labels:
        app: app-task2
    spec:
      containers:
      - name: nginx
        image: nginx:1.28
        ports:
        - containerPort: 80
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: app-task2
spec:
  selector:
    app: app-task2
  ports:
    - name: nginx
      protocol: TCP
      port: 80
      targetPort: 80
    - name: multitool-http
      protocol: TCP
      port: 8080
      targetPort: 8080
